examples/counter/k8s/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: counter
  labels:
    app: counter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      labels:
        app: counter
        lang: go
    spec:
      containers:
        - name: counter
          image: anandology/go-counter
          ports:
            - containerPort: 8080
