examples/counter/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter
spec:
  selector:
    app: counter
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
