examples/counter/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: counter
spec:
  rules:
  - host: counter.alpha.k8s.pipal.in
    http:
      paths:
      - backend:
          serviceName: counter
          servicePort: 80
        path: /
